--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/results/
 escpos-php/
 application/config/config.php
+application/config/database.php
