--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ escpos-php/
 application/config/config.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
