--- a/application/.env.example
+++ b/application/.env.example
@@ -3,9 +3,14 @@ BRANCH="RAM-X Iloilo"
 
 BASE_URL=/sales.ramx.store
 
+SESSION_COOKIE_NAME="ci_session"
+
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=admin
 DB_NAME=ramx_sales_orders
 
-
+REPORT_HOST=
+REPORT_PATH=
+REPORT_USER=
+REPORT_PASSWORD=
