--- a/application/composer.json
+++ b/application/composer.json
@@ -12,14 +12,13 @@
 	},
 	"require": {
 		"php": ">=5.4",
-		"jaspersoft/rest-client": "^2.0",
-		"vlucas/phpdotenv": "^5.2"
+		"jaspersoft/rest-client": "^2.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
+		"mikey179/vfsstream": "1.1.*",
 		"phpunit/phpunit": "4.* || 5.*"
 	}
 }
